minikube/my_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: my-port
  type: ClusterIP
