minikube/onnx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onnx-service
spec:
  selector:
    app: onnx-app
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: onnx-port
