minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: onnx-service
            port:
              number: 8001
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8000
